Duplicate question form link to jurist profile, fix layout of question blocks and categories select on mobiles

--- a/www/app/Resources/public/blocks/crosslayouts/b-question-block/styles/b-question-block.sass
+++ b/www/app/Resources/public/blocks/crosslayouts/b-question-block/styles/b-question-block.sass
@@ -71,9 +71,11 @@ $block: '.b-question-block'
         &_highlighted
             border-color: $highlighted-question-border
 
+    &__bottom-title
+        margin-bottom: 5px
+
     &__reply-link
         display: inline-block
-        margin-left: 6px
 
     &__media
         border-radius: 50%
@@ -131,6 +133,12 @@ $block: '.b-question-block'
 
             &__date
                 margin-left: 15px
+
+            &__bottom-title
+                display: inline
+
+            &__reply-link
+                margin-left: 6px
 
             &_latest
                 padding: 0
